Promjene naziva u one navadene u tekstu zadace

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -7,7 +7,7 @@
     tools:context=".MainActivity">
 
     <Spinner
-        android:id="@+id/spinner"
+        android:id="@+id/filterKvizova"
         android:layout_width="264dp"
         android:layout_height="23dp"
         android:layout_marginTop="32dp"
@@ -17,7 +17,7 @@
         app:layout_constraintTop_toTopOf="parent" />
 
     <androidx.recyclerview.widget.RecyclerView
-        android:id="@+id/kvizoviRecyclerView"
+        android:id="@+id/listaKvizova"
         android:layout_width="0dp"
         android:layout_height="0dp"
         android:layout_marginStart="8dp"
@@ -27,21 +27,21 @@
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/spinner"
+        app:layout_constraintTop_toBottomOf="@+id/filterKvizova"
         app:layout_constraintVertical_bias="0.52" />
 
     <com.google.android.material.floatingactionbutton.FloatingActionButton
-        android:id="@+id/floatingActionButton2"
+        android:id="@+id/upisDugme"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:backgroundTint="#FF8A80"
         android:clickable="true"
-        app:layout_constraintBottom_toBottomOf="@+id/kvizoviRecyclerView"
+        app:layout_constraintBottom_toBottomOf="@+id/listaKvizova"
         app:layout_constraintDimensionRatio="1:1"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.9"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="@+id/kvizoviRecyclerView"
+        app:layout_constraintTop_toTopOf="@+id/listaKvizova"
         app:layout_constraintVertical_bias="0.9"
         app:srcCompat="@drawable/ic_baseline_add_box_24" />
 
