--- a/app/src/main/res/layout/fragment_pokusaj.xml
+++ b/app/src/main/res/layout/fragment_pokusaj.xml
@@ -9,16 +9,18 @@
 
     <com.google.android.material.navigation.NavigationView
         android:id="@+id/navigacijaPitanja"
-        android:layout_width="136dp"
+        android:layout_width="176dp"
         android:layout_height="0dp"
+        android:layout_marginTop="8dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.0" />
 
     <FrameLayout
         android:id="@+id/framePitanje"
-        android:layout_width="0dp"
-        android:layout_height="629dp"
+        android:layout_width="261dp"
+        android:layout_height="732dp"
         android:layout_marginStart="8dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
