--- a/app/src/main/res/layout/fragment_pitanje.xml
+++ b/app/src/main/res/layout/fragment_pitanje.xml
@@ -21,8 +21,8 @@
 
     <ListView
         android:id="@+id/odgovoriLista"
-        android:layout_width="0dp"
-        android:layout_height="0dp"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
         android:layout_marginStart="24dp"
         android:layout_marginTop="16dp"
         android:layout_marginEnd="24dp"
