--- a/app/src/main/res/layout/fragment_pitanje.xml
+++ b/app/src/main/res/layout/fragment_pitanje.xml
@@ -21,10 +21,10 @@
 
     <ListView
         android:id="@+id/odgovoriLista"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
         android:layout_marginStart="24dp"
-        android:layout_marginTop="16dp"
+        android:layout_marginTop="100dp"
         android:layout_marginEnd="24dp"
         android:layout_marginBottom="16dp"
         app:layout_constraintBottom_toBottomOf="parent"
